fix alignment logo

--- a/app/assets/stylesheets/grape_swagger_rails/index.css
+++ b/app/assets/stylesheets/grape_swagger_rails/index.css
@@ -15456,10 +15456,8 @@ header.site-header.site-header nav .navbar-brand {
 header.site-header.site-header nav .navbar-brand a {
     background: url("../images/logo-small.png") center left no-repeat;
     /*background-size: 76%;*/
-    width: 180px;
-    height: 80px;
     display: block;
-    margin-top: 5px;
+    margin-top: -15px;
     background-size: 48%;
 }
 header.site-header.site-header nav .navbar-brand img {
